temp fix on nav-bar and fix on collapse icons

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,11 +30,6 @@
   color: white;
   padding: 30px 20px;
 }
-/*.nav-container {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}*/
 .nav-bar {
   background-color: #01152a;
   width: 100px;
@@ -63,6 +58,12 @@
 .nav-spacer {
   background-color: #041b32;
   height: 14px;
+}
+.nav-overflow-exterior {
+  height: 200vh;
+}
+.nav-overflow-interior {
+
 }
 .main-body {
   background-color: white;
@@ -170,23 +171,14 @@
   top: 40%;
   width:20px;
 }
-.down-arrow-one {display: block;}
 .up-arrow-one {display: none;}
-.down-arrow-two{display: block;}
 .up-arrow-two{display: none;}
-.down-arrow-three {display: block;}
 .up-arrow-three {display: none;}
-.down-arrow-four {display: block;}
 .up-arrow-four {display: none;}
-.down-arrow-five {display: block;}
 .up-arrow-five {display: none;}
-.down-arrow-six{display: block;}
 .up-arrow-six{display: none;}
-.down-arrow-seven {display: block;}
 .up-arrow-seven {display: none;}
-.down-arrow-eight {display: block;}
 .up-arrow-eight {display: none;}
-.down-arrow-nine {display: block;}
 .up-arrow-nine {display: none;}
 .collapse-icon-plus-one {
   font-weight: 900;
